remove unused experiments

--- a/6_evaluation/2024_08_21_Boehm_papb_differential/Hyperparameters.ipynb
+++ b/6_evaluation/2024_08_21_Boehm_papb_differential/Hyperparameters.ipynb
@@ -68,7 +68,7 @@
    ],
    "source": [
     "# import the results\n",
-    "problem_name = \"Boehm_papb_differential_BaF3_Epo\"\n",
+    "problem_name = \"Boehm_papb_differential\"\n",
     "experiment_name = \"2024_08_21_\" + problem_name\n",
     "\n",
     "summary = load_exp_summary(dir_5 / experiment_name).sort_values(by=likelihood)\n",
