fix boehm problem name

--- a/6_evaluation/Boehm/Runtimes.ipynb
+++ b/6_evaluation/Boehm/Runtimes.ipynb
@@ -37,7 +37,7 @@
     "scenarios = [\n",
     "    'boehm_papa_export_kinetic',\n",
     "    'boehm_observable_ab_ratio',\n",
-    "    'boehm_papb_differential_BaF3_Epo',\n",
+    "    'boehm_papb_differential',\n",
     "    'boehm_export_augmented',\n",
     "]"
    ]
@@ -53,7 +53,7 @@
     "experiments_names = [\n",
     "    '2024_08_01_Boehm_papa_export_kinetic',\n",
     "    '2024_08_11_Boehm_observable_ab_ratio',\n",
-    "    '2024_08_21_Boehm_papb_differential_BaF3_Epo',\n",
+    "    '2024_08_21_Boehm_papb_differential',\n",
     "    '2024_08_27_Boehm_export_augmented',\n",
     "    '2024_11_14_Boehm_export_augmented_preopt',\n",
     "    '2024_11_20_Boehm_export_augmented_preopt',\n",
@@ -76,7 +76,7 @@
     "map_labels = {\n",
     "    'boehm_papa_export_kinetic': 'kinetic',\n",
     "    'boehm_observable_ab_ratio': 'observable',\n",
-    "    'boehm_papb_differential_BaF3_Epo': 'differential',\n",
+    "    'boehm_papb_differential': 'differential',\n",
     "    'boehm_export_augmented': 'augmented',\n",
     "}\n",
     "df['short_label'] = df[\"problem_name\"].map(map_labels)\n",
