--- a/6_evaluation/notebooks/Figure6_.ipynb
+++ b/6_evaluation/notebooks/Figure6_.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "- boehm_papa_export_kinetic\n",
     "    - 110\n",
-    "- boehm_papb_differential_BaF3_Epo\n",
+    "- boehm_papb_differential\n",
     "    - 296\n",
     "- boehm_export_augmented\n",
     "    - 147\n",
@@ -154,7 +154,7 @@
    "source": [
     "#### Scenario 2: \n",
     "- Simulate states for *differential*\n",
-    "- problem name `boehm_papb_differential_BaF3_Epo`\n",
+    "- problem name `boehm_papb_differential`\n",
     "- Best UDE: 296"
    ]
   },
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "problem_name = \"boehm_papb_differential_BaF3_Epo\"\n",
+    "problem_name = \"boehm_papb_differential\"\n",
     "experiment_date = \"2024_08_21\"\n",
     "experiment_name = experiment_date + \"_B\" + problem_name[1:]\n",
     "\n",
